--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.9",
 		"@types/glob": "^8.1.0",
-		"glob": "^11.0.3"
+		"glob": "^11.0.3",
+		"prismjs": "^1.30.0"
 	}
 }
