--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.9",
 		"@types/glob": "^8.1.0",
+		"@types/marked": "^5.0.2",
 		"glob": "^11.0.3",
+		"marked": "^16.2.1",
 		"prismjs": "^1.30.0"
 	}
 }
