--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.0",
+		"@sveltejs/adapter-vercel": "^5.10.2",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/typography": "^0.5.15",
@@ -30,7 +31,7 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
-		"@sveltejs/adapter-static": "^3.0.9",
+
 		"@types/glob": "^8.1.0",
 		"@types/marked": "^5.0.2",
 		"glob": "^11.0.3",
